--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>javafx</groupId>
-  <artifactId>javafx</artifactId>
+  <groupId>ulb</groupId>
+  <artifactId>ulb</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <name>JavaFX</name>
+  <name>Bugemon</name>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -43,6 +43,11 @@
       <artifactId>junit-jupiter-params</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+        <groupId>org.openjfx</groupId>
+        <artifactId>javafx-controls</artifactId>
+        <version>21</version>
+    </dependency>
   </dependencies>
 
   <build>
@@ -70,7 +75,7 @@
               </execution>
             </executions>
             <configuration>
-              <mainClass>javafx.Main</mainClass>
+              <mainClass>ulb.Main</mainClass>
               <!-- <executable>maven</executable> -->
               <arguments>
               <!-- Nous n'avons pas de paramètre stdin ici -->
