--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,7 @@
     <dependency>
         <groupId>org.openjfx</groupId>
         <artifactId>javafx-controls</artifactId>
-        <version>21</version>
+        <version>21.0.2</version>
     </dependency>
   </dependencies>
 
@@ -121,6 +121,14 @@
     <plugins>
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
+      </plugin>
+      <plugin>
+          <groupId>org.openjfx</groupId>
+          <artifactId>javafx-maven-plugin</artifactId>
+          <version>0.0.8</version>
+          <configuration>
+              <mainClass>ulb.Main</mainClass>
+          </configuration>
       </plugin>
     </plugins>
   </build>
